--- a/src/infinityscroll.html
+++ b/src/infinityscroll.html
@@ -1,4 +1,4 @@
-<span ng-show="ctrl.onscroll" class="badge">
-	{{ctrl.getRange()}}/{{total}}
+<span ng-show="ctrl.onscroll" class="infos-crolling">
+	{{ctrl.getInfos()}}
 </span>
 <ng-transclude></ng-transclude>
