remove node ng-include

--- a/src/infinityscroll.html
+++ b/src/infinityscroll.html
@@ -1,4 +1,2 @@
-<span ng-show="ctrl.onscroll" class="infos-crolling">
-	{{ctrl.getInfos()}}
-</span>
+<span ng-show="ctrl.onscroll" class="infos-crolling" ng-bind="ctrl.getInfos()"></span>
 <ng-transclude></ng-transclude>
